fix enter event on mobile

--- a/index.scss
+++ b/index.scss
@@ -172,4 +172,5 @@ body {
   color: black;
   font-size: 20px;
   font-weight: 600;
+  transition: 0.3s ease;
 }
